the solution is work for post size but not work for gap hm try a new fake fix tomorow

--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -836,14 +836,33 @@ select{
 
 }
 
+.expGrid {
+  grid-auto-rows: 80px;
+  grid-auto-flow: dense !important;
+}
+
+.square {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.landscape {
+  grid-column: span 3;
+  grid-row: span 2;
+}
+
+.portrait {
+  grid-column: span 2;
+  grid-row: span 4;
+}
 
 .portrate {
-  height: 200px;
-  width: 100px;
+  height: 250px;
+  width: 150px;
 }
 
 .landScape {
-  height: 100px;
+  height: 150px;
   width: 250px;
 }
 
